crates/core-invoice/tests/snapshots/typst_conversion__data_expenses_to_typst.snap
---
source: crates/core-invoice/tests/typst_conversion.rs
expression: typst
---
#let provide() = {
  (
  client: (
    company_name: "Holmes Ltd",
    contact_person: "Sherlock Holmes",
    organisation_number: "9876543-2101",
    postal_address: (
      city: "London",
      country: "England",
      street_address: (
        line_1: "221B Baker Street",
        line_2: "",
      ),
      zip: "NW1 6XE",
    ),
    vat_number: "GB987654321",
  ),
  information: (
    due_date: "2025-06-30",
    emphasize_color_hex: "#8b008b",
    footer_text: "Billed with the utmost discretion—your secrets are safe, for a price.",
    invoice_date: "2025-05-31",
    number: 23,
    purchase_order: "PO-12345",
  ),
  line_items: (
    is_expenses: true,
    items: (
      (
        currency: "EUR",
        name: "Breakfast",
        quantity: 1.0,
        total_cost: 1602.25,
        transaction_date: "2025-05-20",
        unit_price: 1602.25,
      ),
    ),
  ),
  output_path: (
    name: "2025-05-31_Lupin_et_Associés_expenses_invoice_23.pdf",
  ),
  payment_info: (
    bank_name: "Banque de Paris",
    bic: "BNPAFRPP",
    currency: "EUR",
    iban: "FR76 3000 6000 0112 3456 7890 189",
    payment_method_overrides: (),
    terms: "Net 30",
    vat: 0.0,
  ),
  vendor: (
    company_name: "Lupin et Associés",
    contact_person: "Arsène Lupin",
    organisation_number: "7418529-3012",
    postal_address: (
      city: "Paris",
      country: "France",
      street_address: (
        line_1: "5 Avenue Henri-Martin",
        line_2: "Appartement 24",
      ),
      zip: "75116",
    ),
    vat_number: "FR74185293012",
  ),
)
}
